# Flux

./: .env.example  .gitignore  ONBOARDING.md  README.md  pyproject.toml
.claude/: settings.local.json
RPD/: PRD01.md  PRD02.md
docs/RPD/: PRD03.md  PRD04.md
docs/superpowers/plans/: 2026-04-23-subagent.md
docs/superpowers/specs/: SPEC01-agent-loop.md  SPEC03-todo.md  SPEC05-subagent.md
evol-report/: evo1-report.md
flux/: __init__.py  __main__.py  agent.py  cli.py  config.py  display.py  llm.py  message.py
flux/tools/: __init__.py  base.py  bash.py  edit.py  read.py  registry.py  todo.py  write.py
reference_examples/terminal_bench_2/: .gitignore  README.md  SETUP.md  claude_wrapper.py  meta_harness.py  pyproject.toml
reference_examples/terminal_bench_2/.claude/skills/meta-harness-terminal-bench-2/: SKILL.md
reference_examples/terminal_bench_2/agents/: baseline_kira.py  baseline_terminus2.py
reference_examples/terminal_bench_2/prompt-templates/: terminus-kira.txt
reference_examples/terminal_bench_2/scripts/: run_eval.sh
reference_examples/text_classification/: README.md  __init__.py  benchmark.py  config.yaml  inner_loop.py  llm.py  memory_system.py  meta_harness.py  pyproject.toml
reference_examples/text_classification/agents/: __init__.py  fewshot_all.py  fewshot_memory.py  no_memory.py
spec/: SPEC02-display.md  SPEC04-file-tools.md  SPEC04-todo.md  error-handling.md
tests/: test_agent.py  test_display.py  test_file_tools.py  test_llm.py  test_todo.py  test_tools.py
(+1 files in other folders)
