[project]
name = "flux"
version = "0.1.0"
description = "AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx",
    "python-dotenv",
]

[project.scripts]
flux = "flux.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
