[project]
name = "terminal-bench-2"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "harbor>=0.1.44",
  "litellm<1.82.7",
  "tenacity>=8",
  "python-dotenv",
  "terminal-bench",
]

[tool.uv]
package = false

[tool.uv.sources]
terminal-bench = { git = "https://github.com/harbor-framework/terminal-bench.git" }
